--- a/src/main/webapp/components/user/list.html
+++ b/src/main/webapp/components/user/list.html
@@ -7,7 +7,7 @@
 	
 	<md-content flex>
 		<md-list>
-			<md-item ng-repeat="entity in entityList.items"> 
+			<md-item class="md-item-padded" ng-repeat="entity in entityList.items"> 
 				<md-item-content>
 					<div class="md-tile-left">
 						<div class="list-item-box list-item-box-left">
