--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -114,25 +114,31 @@ md-progress-circular.spinner-gray .md-inset {
 
 
 .fab-container {
-	position:absolute; 
-	top:auto; 
-	right:28px; 
-	bottom:28px; 
-	z-index:50;
+	position: fixed;
+	top: auto;
+	right: 0;
+	bottom: 0;
+	z-index: 50;
 	text-align: center;
+	padding: 28px;
+	
 }
 
-material-button.material-button-fab-small {
+.md-fab.md-button-fab-small {
 	width: 40px;
 	height: 40px;
+	margin:2px;
 }
-material-button.material-button-fab-small material-icon {
-	margin-top:0px;
+.md-fab.md-button-fab-small md-icon {
+	position: relative;
+	top: -4px;
 }
 
 .fab-container .fab-container-small-fabs {
 	position:relative;
 	left:85px;
+	
+	margin-bottom: 5px;
 	
 	 -webkit-transition: left .5s; /* For Safari 3.1 to 6.0 */
     transition: left .5s;
