--- a/src/main/webapp/components/file/list-fab.html
+++ b/src/main/webapp/components/file/list-fab.html
@@ -1,26 +1,26 @@
-<div ng-controller='fileListFabController' class="fab-container" layout="vertical">
+<div ng-controller='fileListFabController' class="fab-container" layout="column">
 	<div class="fab-container-small-fabs">
 		<div>
-			<md-button class="md-fab material-button-fab-small" ng-click="fabCreate('application/vnd.google-apps.spreadsheet')">
+			<md-button class="md-fab md-button-fab-small md-primary" md-theme="green" ng-click="fabCreate('application/vnd.google-apps.spreadsheet')">
 				<md-icon icon="/img/sheets-logo-white.svg"></md-icon>
-				<md-tooltip>new Sheet</md-tooltip>
+				<!-- <md-tooltip>new Sheet</md-tooltip> -->
 			</md-button>
 		</div>
 		<div>
-			<md-button class="md-fab material-button-fab-small" ng-click="fabCreate('application/vnd.google-apps.presentation')">
+			<md-button class="md-fab md-button-fab-small md-primary" md-theme="yellow" ng-click="fabCreate('application/vnd.google-apps.presentation')">
 				<md-icon icon="/img/presentation-logo-white.svg"></md-icon>
-				<md-tooltip>new Slide</md-tooltip>
+				<!-- <md-tooltip>new Slide</md-tooltip> -->
 			</md-button>
 		</div>
 		<div>
-			<md-button class="md-fab material-button-fab-small" ng-click="fabCreate('application/vnd.google-apps.document')">
+			<md-button class="md-fab md-button-fab-small md-primary" md-theme="blue" ng-click="fabCreate('application/vnd.google-apps.document')">
 				<md-icon icon="/img/docs-logo-white.svg"></md-icon>
-				<md-tooltip>new Doc</md-tooltip>
+				<!-- <md-tooltip>new Doc</md-tooltip> -->
 			</md-button>
 		</div>
 	</div>
 	<div>
-		<md-button class="md-fab md-primary" ng-click="fabAdd()">
+		<md-button class="md-fab md-primary" md-theme="red" ng-click="fabAdd()">
 			<md-icon icon="/img/icons/ic_add_24px.svg"></md-icon>
 			<md-tooltip>Add new File</md-tooltip>
 		</md-button>
