--- a/src/main/webapp/components/meeting/list-fab.html
+++ b/src/main/webapp/components/meeting/list-fab.html
@@ -1,5 +1,5 @@
 <span>
-	<md-button class="md-fab md-fab-bottom-right" ng-href="/#/project/{{routeParams.projectId}}/meeting">
+	<md-button class="md-fab md-fab-bottom-right md-primary" md-theme="red" ng-href="/#/project/{{routeParams.projectId}}/meeting">
 		<md-icon icon="/img/icons/ic_add_24px.svg"></md-icon>
 		<md-tooltip>Add new Meeting</md-tooltip>
 	</md-button>
