--- a/src/main/webapp/components/user/list-fab.html
+++ b/src/main/webapp/components/user/list-fab.html
@@ -1,5 +1,5 @@
 <span ng-controller='userListFabController'>
-	<md-button class="md-fab md-primary md-fab-bottom-right" ng-click="fabAdd($event)">
+	<md-button class="md-fab md-primary md-fab-bottom-right" md-theme="red" ng-click="fabAdd($event)">
 		<md-icon icon="/img/icons/ic_add_24px.svg"></md-icon>
 		<md-tooltip>Add user</md-tooltip>
 	</md-button>
