--- a/src/main/webapp/common.css
+++ b/src/main/webapp/common.css
@@ -8,7 +8,7 @@ md-whiteframe {
 }
 
 md-item.md-item-padded > md-item-content{
-	padding:8px;
+	padding:12px;
 }
 
 .material-content-actions {
@@ -74,6 +74,12 @@ md-input-group.md-input-focused > input[type=date] {
 	margin: 2px 5px;
 }
 
+.face-big {
+	border-radius: 30px;
+	width: 58px;
+	margin: 5px 8px;
+}
+
 
 .image-responsive {
 	max-width: 100%;
@@ -130,6 +136,16 @@ md-checkbox.checkbox-bigger.md-checked .md-icon:after {
 
 .md-tile-left, .md-tile-right, .md-tile-content {
 	padding: 0 16px;
+}
+.md-tile-left.first,
+.md-tile-right.first,
+.md-tile-content.first {
+	padding-left:0;
+}
+.md-tile-left.last,
+.md-tile-right.last,
+.md-tile-content.last {
+	padding-right:0;
 }
 
 a.md-button.md-button-padded {
