--- a/src/main/webapp/components/meeting/list.html
+++ b/src/main/webapp/components/meeting/list.html
@@ -14,7 +14,7 @@
 				<md-list layout="column"> 
 					<md-item class="md-item-padded">
 						<md-item-content>
-							<div class="md-tile-left" style="text-align:center; min-width:120px">
+							<div class="md-tile-left first" style="text-align:center; min-width:120px">
 								<md-icon icon="/img/icons/ic_help_48px.svg"></md-icon>
 								<p class="text-muted" ng-show="meeting.poll.preferredDate">
 									{{meeting.poll.preferredDate|date:'dd'}}<br>
@@ -22,7 +22,7 @@
 									<i style="display:inline-block; padding-top:8px;">(maybe)</i>
 								</p>
 							</div>
-							<div class="md-tile-content" ng-click="goto(meeting)" style="cursor: pointer;" flex>
+							<div class="md-tile-content last" ng-click="goto(meeting)" style="cursor: pointer;" flex>
 								<div class="list-item-box list-item-box-right">
 									<h3>{{meeting.title}}</h3>
 									<p>{{meeting.description}}</p>
@@ -64,7 +64,7 @@
 				<md-list layout="column"> 
 					<md-item class="md-item-padded"> 
 						<md-item-content>
-							<div class="md-tile-left" style="text-align:center; min-width:120px">
+							<div class="md-tile-left first" style="text-align:center; min-width:120px">
 								<div class="list-item-box list-item-box-left">
 									<span class="meeting-day">{{meeting.timestamp|date:'dd'}}</span>
 									<br/>
@@ -75,7 +75,7 @@
 								<h3>{{meeting.title}}</h3>
 								<p>{{meeting.description}}</p>
 							</div>
-							<div class="md-tile-right" style="text-align:center; min-width:150px">
+							<div class="md-tile-right last" style="text-align:center; min-width:150px">
 								<md-button class="md-button-padded" ng-href="{{getHangoutLink(meeting)}}" target="_blank" data-ng-show="meeting.timestamp && !meeting.past" style="color:inherit">
 									<md-icon icon="/img/icons/ic_hangout_24px.svg"></md-icon> Hangout&nbsp;
 								</md-button>
@@ -96,14 +96,14 @@
 				<md-list layout="column"> 
 					<md-item class="md-item-padded"> 
 						<md-item-content>
-							<div class="md-tile-left" style="text-align:center; min-width:120px">
+							<div class="md-tile-left first" style="text-align:center; min-width:120px">
 								<div class="list-item-box list-item-box-left">
 									<span class="meeting-day">{{meeting.timestamp|date:'dd'}}</span>
 									<br/>
 									<span class="meeting-month">{{meeting.timestamp|date:'MMMM'}}</span>
 								</div>
 							</div>
-							<div class="md-tile-content" ng-click="goto(meeting)" style="cursor: pointer;" flex>
+							<div class="md-tile-content last" ng-click="goto(meeting)" style="cursor: pointer;" flex>
 								<h3>{{meeting.title}}</h3>
 								<p>{{meeting.description}}</p>
 							</div>
