--- a/src/main/webapp/components/user/md-typeahead-item.html
+++ b/src/main/webapp/components/user/md-typeahead-item.html
@@ -3,6 +3,6 @@
 		<img ng-src="{{item.iconUrl}}" class="face" alt="{{item.firstName}} {{item.lastName}}">
 	</div>
 	<div flex>
-		<span>{{item.firstName}} {{tem.lastName}}</span>
+		<span>{{item.firstName}} {{item.lastName}}</span>
 	</div>
 </div>
