--- a/src/main/webapp/components/task/list.html
+++ b/src/main/webapp/components/task/list.html
@@ -25,12 +25,12 @@
 	<md-whiteframe class="md-whiteframe-z1 md-whiteframe-with-subheader" ng-show="(taskGroupedList | filter:currentFilter).length>0" layout layout-align="center center">
 		<md-content flex>
 				<md-list layout="column"> 
-					<md-item class="md-item-padded" ng-repeat="task in taskGroupedList | filter:currentFilter | orderBy:currentOrderBy:currentOrderByReverse"> 
+					<md-item class="md-item-padded" style="cursor: pointer;" ng-repeat="task in taskGroupedList | filter:currentFilter | orderBy:currentOrderBy:currentOrderByReverse" ng-click="goto(task)"> 
 						<md-item-content>
 							<div class="md-tile-left first">
-								<md-checkbox class="checkbox-bigger" ng-model="task.completed" aria-label="Completed" ng-click="task.$save()"></md-checkbox>
+								<md-checkbox class="checkbox-bigger" ng-model="task.completed" aria-label="Completed" ng-click="task.$save();$event.stopPropagation()"></md-checkbox>
 							</div>
-							<div class="md-tile-content" ng-click="goto(task)" style="cursor: pointer;" flex>
+							<div class="md-tile-content" flex>
 								<h3>{{task.title}}</h3>
 								<p>{{task.description}}</p>
 							</div>
