--- a/src/main/webapp/components/user/add-modal.html
+++ b/src/main/webapp/components/user/add-modal.html
@@ -9,7 +9,7 @@
 					selected-item-template-url="/components/user/md-typeahead-selected-item.html"
 					item-template-url="/components/user/md-typeahead-item.html"
 					source="lookupUsers"
-					value="user"
+					ng-model="user"
 				>
 				</md-typeahead>
 			</md-input-group>
