date vs datetime-local

--- a/src/main/webapp/components/meeting/edit.html
+++ b/src/main/webapp/components/meeting/edit.html
@@ -17,6 +17,7 @@
 							min-view="minutes"
 							max-view="month"
 							format="short"
+							type="datetime-local"
 						>
 						</md-datepicker>
 					</md-input-group>
@@ -37,6 +38,7 @@
 									max-view="month"
 									format="short"
 									ng-disabled="meeting.poll.started"
+									type="datetime-local"
 								>
 								</md-datepicker>
 							</md-input-group>
