--- a/src/main/webapp/components/task/edit.html
+++ b/src/main/webapp/components/task/edit.html
@@ -27,7 +27,7 @@
 				<div flex>
 					<md-text-float label="Labels" ng-model="task.labels" class="md-text-float-full-with"></md-text-float>
 				</div>
-				<div style="width:30%">
+				<div style="width:20%">
 					<md-input-group class="md-text-float-full-with md-default-theme">
 						<label for="dueDate">Due date</label>
 						<md-datepicker
@@ -36,6 +36,7 @@
 							min-view="date"
 							max-view="month"
 							format="shortDate"
+							type="date"
 						>
 						</md-datepicker>
 					</md-input-group>
